[gd_scene load_steps=5 format=2]

[ext_resource path="res://elements/MainGraph.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/TopBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MainEditor.gd" type="Script" id=3]
[ext_resource path="res://elements/SideBar.tscn" type="PackedScene" id=6]

[node name="MainEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 724.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" parent="HSplitContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 724.0

[node name="MainGraph" parent="HSplitContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 30.0
margin_bottom = 600.0

[node name="SideBar" parent="HSplitContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="add_neighbor" from="HSplitContainer/VBoxContainer/TopBar" to="." method="_on_Neighbor_pressed"]
[connection signal="load_button_pressed" from="HSplitContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_load_button_pressed"]
[connection signal="save_button_pressed" from="HSplitContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_save_button_pressed"]
[connection signal="test_shipment" from="HSplitContainer/VBoxContainer/TopBar" to="." method="_on_TopBar_test_shipment"]
[connection signal="zoom_changed" from="HSplitContainer/VBoxContainer/TopBar" to="." method="_on_Zoom_changed"]
[connection signal="connection_request" from="HSplitContainer/VBoxContainer/MainGraph" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="HSplitContainer/VBoxContainer/MainGraph" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="node_selected" from="HSplitContainer/VBoxContainer/MainGraph" to="." method="_on_GraphEdit_node_selected"]
[connection signal="node_unselected" from="HSplitContainer/VBoxContainer/MainGraph" to="." method="_on_GraphEdit_node_unselected"]
